Fixed logout button alignment

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -14,6 +14,12 @@
       .OneDayItem {
         margin-left: auto;
       }
+
+      .AuthItem {
+        &.IsAuth {
+          margin-left: 2rem;
+        }
+      }
     }
   }
 
@@ -43,9 +49,6 @@
     }
 
     .AuthItem {
-      &.IsAuth {
-        margin-left: 2rem;
-      }
       &:not(.IsAuth) {
         margin-left: auto;
       }
